tests/api/reference/negative/11-le-width.asm
const invalid: bytes = bytes.le(0, 9)
